# dupe-hunter

./: README.md  __init__.py  pyproject.toml
src/: __init__.py  dupe_hunter.py
src/dupe_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_folder/: d.txt
