[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupe-hunter"
version = "0.1.0"
description = "Find and remove duplicate files quickly"
readme = "README.md"
authors = [
    {name = "lalalaleishaaa", email = "your-email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/lalalaleishaaa/dupe-hunter"
"Bug Tracker" = "https://github.com/lalalaleishaaa/dupe-hunter/issues"

[project.scripts]
dupe-hunter = "src.dupe_hunter:app"